2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `ED' configuration into configure.in.

	* configure.in (eddesc): New AC_DEFUN.
	(ED): New AC_ARG_VAR.
	(ED): Do this AC_PATH_PROG only if diff3(1) is not a user program.
	(ED): New AC_DEFINE_UNQUOTED.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `COMPAT2' configuration into configure.in.

	* configure.in (compat2): New AC_ARG_ENABLE.
	(COMPAT2): New AC_DEFINE_UNQUOTED.
	* README: Update.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dist] Don't distribute INSTALL.RCS.

	* README: Incorporate INSTALL.RCS.
	* Makefile.in (dist): Don't distribute INSTALL.RCS.
	* INSTALL.RCS: Delete file.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't distribute (now-defunct) conf.heg.

	* Makefile.in (dist): Remove "*.heg" from
	list of files to distribute in the src/ subdir.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[sec] Use `mkstemp' instead of `mktemp'.

	* configure.in (mktemp): Remove from `AC_CHECK_FUNCS_ONCE'.
	(mkstemp): Add to `AC_CHECK_FUNCS_ONCE'.

2010-03-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix omission bug: Distribute build-aux/abs-p.in, as well.

	This fixes the omission in commit:
	[build] Detect "absolute-filename-p" without compiling.

	* Makefile.in (dist): Distribute build-aux/abs-p.in.

2010-03-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add --help, --version handling for all programs.

	* build-aux/extract-help: New file.
	* Makefile.in (dist): Distribute build-aux/extract-help.
	Also, substitute package version into $d/src/rcsfreeze.sh.

2010-03-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[admin] Don't distribute rcs_func.ms.

	* rcs_func.ms: Delete file.
	* README: Update.

2010-03-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[admin] Don't distribute REFS.

	* REFS: Delete file.
	* Makefile.in (dist): Update.

2010-03-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[admin] Rename file CREDITS to AUTHORS.

	* AUTHORS: Rename from CREDITS; refill.