@@ -145,7 +145,9 @@ If
 is omitted, remove the latest lock held by the caller.
 Normally, only the locker of a revision can unlock it.
 Somebody else unlocking a revision breaks the lock.
-This causes a mail message to be sent to the original locker.
+If RCS was configured
+.BR "\-\-with-mailer" ,
+then this causes a mail message to be sent to the original locker.
 The message contains a commentary solicited from the breaker.
 The commentary is terminated by end-of-file or by a line containing
 .BR \&. "\ by"
